# VocalTrainer

./: .gitignore  CMakeLists.txt  LICENSE  MainWindow.cpp  MainWindow.h  README.md  main.cpp
